- works locally - need to test package.json changes on remote machine

--- a/package.json
+++ b/package.json
@@ -2,16 +2,13 @@
   "name": "deletedirectoriesusingnode",
   "version": "1.0.0",
   "description": "Delete directories specified in json file using node",
-  "main": "deleteDirs.js",
+  "main": "bin.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "bin": {
-    "deletedirs": "./bin.js"
+    "deleteDirs": "./bin.js"
   },
-   "files": [
-    "directoriesToDelete.json"
-   ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/markquinn12/deleteDirectoriesUsingNode.git"
