- editing package again - all working locally this time

--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "deletedirectoriesusingnode",
   "version": "1.0.0",
   "description": "Delete directories specified in json file using node",
-  "main": "bin.js",
+  "main": "deleteDirs.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "bin": {
-    "deleteDirs": "./bin.js"
+    "deletedirs": "./bin.js"
   },
   "repository": {
     "type": "git",
